<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_ClientSteps" Id="{d9efc4d4-e127-471b-a17e-772d5e4c47b7}">
    <Declaration><![CDATA[{attribute 'tc_no_symbol'}
TYPE E_ClientSteps :
(
	CLIENT_STATE_IDLE,//空闲状态
	CLIENT_STATE_CONNECT_START,//启动网络连接
	CLIENT_STATE_CONNECT_WAIT,//等待连接完成
	CLIENT_STATE_DATAEXCHA_START,//启动数据收发操作
	CLIENT_STATE_DATAEXCHA_WAIT,//等待数据收发完成
	CLIENT_STATE_CLOSE_START,//启动关闭连接操作
	CLIENT_STATE_CLOSE_WAIT,//等待关闭完成
	
//	CLIENT_STATE_IDLE,
//	CLIENT_STATE_CONNECT_START,
//	CLIENT_STATE_CONNECT_WAIT,
	CLIENT_STATE_SEND_START,
	CLIENT_STATE_SEND_WAIT,
	CLIENT_STATE_WAITTIME1,
	CLIENT_STATE_WAITTIME2,
	CLIENT_STATE_RECIVE_START,
	CLIENT_STATE_RECIVE_WAIT,
	//CLIENT_STATE_CLOSE_START,
	//CLIENT_STATE_CLOSE_WAIT,
	CLIENT_STATE_ERROR,
	CLIENT_STATE_DONE
	
	
	
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>