<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="stTcpIpBaseParaCfg" Id="{67a2bc7e-e2ae-43ce-a5c6-b2c220d60e7c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE stTcpIpBaseParaCfg :
STRUCT
  hSocket	 : T_HSOCKET;
  udiPort  : UDINT;
  tTimeout : TIME;                  (* timeout for socket communication *)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>